--- a/css/header.css
+++ b/css/header.css
@@ -281,6 +281,10 @@ html.visible{
 .control-box a span{
     display: block;
 }
+.control-box a span:first-child{
+    color: gray;
+    margin-right: 5px;
+}
 .control-box li{
     display: flex;
     position: relative;
@@ -789,12 +793,13 @@ html.visible{
     left: -285px;
     background-color: white;
     width: 335px;
-    padding: 1rem;
+    padding: 1.4rem 1rem;
     box-shadow: 0px 0px 9px -3px #c2c0c0;
     border-radius: 5px;
     z-index: 1;
     opacity: 0;
     visibility: hidden;
+    cursor:auto;
 }
 .recent-products .box-product{
     position: relative;
@@ -828,6 +833,7 @@ html.visible{
     color: #2e2e2e;
     font-size: 15px;
     display: flex;
+    align-items: center;
     text-transform: lowercase;
 }
 .recent-products .products{
@@ -836,7 +842,7 @@ html.visible{
 .recent-products .price-pr{
     display: flex;
     justify-content: space-between;
-    padding: 1rem 0;
+    padding: 1rem 0 0;
     font-size: 20px;
 }
 .recent-products .price-pr div{
@@ -853,7 +859,7 @@ html.visible{
     color: var(--primary-color);
     border-radius: 3px;
     border: 2px solid var(--primary-color);
-    padding: .5rem .7rem;
+    padding: .4rem .7rem;
 }
 .recent-products .buy-pr a:first-child:hover{
     background: var(--primary-color);
@@ -871,6 +877,7 @@ html.visible{
     top: 0.5rem;
     right: .5rem;
     cursor: pointer;
+    z-index: 1;
 }
 #rm-pr svg{
     width: 24px;
