--- a/css/header.css
+++ b/css/header.css
@@ -601,7 +601,7 @@ html.visible{
     background: #0000007a;
     position: absolute;
     top: 0;
-    z-index: 1;
+    z-index: 2;
 }
  /* part three of header  */
  /* area location */
@@ -613,7 +613,7 @@ html.visible{
     position: absolute;
     top: 50%;
     left: 50%;
-    z-index: 1;
+    z-index: 2;
     padding: 1.5rem;
     background: white;
     border-radius: 7px;
@@ -644,7 +644,8 @@ html.visible{
     color: var(--text-color);
     text-transform: none;
  }
- .my-location .text-location h5{
+ .my-location .text-location h5,
+ .titles h5{
     font-size: .9rem;
     font-weight: normal;
     margin-bottom: 1.8rem;
@@ -892,7 +893,62 @@ html.visible{
     visibility: visible;
     top: 51px;
 }
-
+.deduct{
+    color: red;
+    text-decoration: line-through;
+    font-size: 13px;
+    margin-right: 0.4rem;
+}
+.weight{
+    font-size: 14px;
+    color: gray;
+}
+.imgProduct{
+    width: 60px;
+}
+.recent-products{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    gap: 1rem;
+}
+.rcemnd-product{
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+    padding: 1rem;
+    border-radius: 5px;
+    margin-bottom: 1rem;
+}
+.bold{
+    font-weight: 600;
+}
+.infoProd{
+    display: flex;
+    align-items: center;
+    margin-top: .3rem;
+}
+#price{
+    margin-right: 0.5rem;
+}
+.content-prd{
+    height: 375px;
+    overflow: hidden;
+    overflow-y: visible;
+}
+.rcemnd-product:last-child{
+    margin: 0;
+}
+.rcemnd-product:first-child,
+.rcemnd-product:last-child{
+    background: #d1f6ef;
+}
+.rcemnd-product:nth-child(2){
+    background:#ff727242;
+}
+.rcemnd-product:nth-child(3){
+    background: #ffa53b4a;
+}
 @media (max-width:1500px){
     .control-box .deliver-num,
     .control-box a:last-child .my-account
