--- a/css/login.css
+++ b/css/login.css
@@ -82,11 +82,22 @@ a{
     font-weight: 500;
 }
 .login{
+    justify-content: start;
+    gap: 4.5rem;
+    position: relative;
+}
+.login::before{
+    content: '';
+    background-color: red;
     background:url("/allimg/loginimg/log-in-bg.png");
     background-repeat: no-repeat;
     background-size: cover;
-    justify-content: start;
-    gap: 4.5rem;
+    position: absolute;
+    left: -11rem;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
 }
 .img{
     padding: 0 10rem;
@@ -123,17 +134,43 @@ a{
 form{
     width: 100%;
     align-items: start;
-    padding-bottom: 3rem;
+    padding-bottom: 2rem;
     border-bottom: 1px solid #e2e2e2;
 }
 form span{
     width: 100%;
 }
+.mr-bt{
+    margin-bottom: .7rem;
+}
 .so-media{
     width: 100%;
 }
 input[type="checkbox"]{
-    width: 20px;
+    appearance: none;
+    background: white;
+    border-radius: 0;
+    border: 2px solid #ececec;
+    width: 25px;
+    height: 25px;
+    cursor: pointer;
+    position: relative;
+}
+input[type="checkbox"]::after{
+    font-family: "Font Awesome 5 Free";
+    font-weight: bold;
+    content: '\f00c';
+    color: var(--primary-color);
+    border-radius: 50%;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    translate: -50% -50%;
+    scale: 0;
+    transition: .3s;
+}
+input[type="checkbox"]:checked::after{
+    scale: 1;
 }
 .myinput label{
     background-color: white;
@@ -220,4 +257,17 @@ input[type="checkbox"]{
     translate: -50% -50%;
     padding: 0 1rem;
     padding-right: 1.2rem;
+}
+.signup{
+    text-align: center;
+    width: 100%;
+}
+.signup h4{
+    font-weight: 400;
+    margin-bottom: 0.5rem;
+}
+.signup a{
+    color: var(--primary-color);
+    font-size: 1.2rem;
+    font-weight: 400;
 }
