--- a/css/login.css
+++ b/css/login.css
@@ -14,6 +14,10 @@ html {
     padding: 0;
     margin: 0;
 }
+*::selection{
+    color: white;
+    background-color: var(--primary-color);
+}
 .flx-jst{
     display: flex;
     justify-content: space-between;
@@ -25,6 +29,10 @@ html {
     justify-content: center;
     align-items: center;
     gap: 1rem;
+}
+.gr-d{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
 }
 .flx-jst-colmn{
     display: flex;
@@ -82,7 +90,7 @@ a{
     font-weight: 500;
 }
 .login{
-    justify-content: start;
+    justify-content: space-between;
     gap: 4.5rem;
     position: relative;
 }
@@ -100,7 +108,8 @@ a{
     z-index: -1;
 }
 .img{
-    padding: 0 10rem;
+    width: 100%;
+    padding: 0 10%;
 }
 .img-icon img{
     width: 30px;
@@ -122,7 +131,6 @@ a{
     border-radius: 5px;
 }
 .info{
-    flex: 1;
     align-items: start;
     padding: 2.5rem;
     background: #f3f3f3;
@@ -181,6 +189,7 @@ input[type="checkbox"]:checked::after{
     position: relative;
     top: -33px;
     left: 5px;
+    pointer-events: none;
 }
 .myinput input[type="email"]:focus ~ label,
 .myinput input[type="password"]:focus ~ label,
@@ -270,4 +279,17 @@ input[type="checkbox"]:checked::after{
     color: var(--primary-color);
     font-size: 1.2rem;
     font-weight: 400;
+}
+@media (max-width:1024px){
+    .login > img {
+        display: none;
+    }
+    .info{
+        width: 100%;
+    }
+}
+@media (max-width:1200px){
+    .login > img {
+        width: 400px;
+    }
 }
