completed some things

--- a/css/signup.css
+++ b/css/signup.css
@@ -77,6 +77,9 @@ svg{
     height: 16px;
     fill: var(--gray-color);
 }
+input{
+    border: 2px solid #ececec;
+}
 a{
     display: block;
 }
@@ -132,6 +135,7 @@ a{
     width: calc(100% - 1rem);
     outline: none;
     border-radius: 5px;
+    border: 2px solid #ebebeb;
 }
 .info{
     align-items: start;
