--- a/css/invoice.css
+++ b/css/invoice.css
@@ -76,7 +76,7 @@ html{
 th{
     font-weight: 600;
     font-size: 14px;
-    padding: 1rem;
+    padding: 1rem 0.2rem;
     border: 1px solid #e4e4e4;
     border-right: none;
 }
@@ -127,7 +127,7 @@ table{
     width: 100%;
 }
 .tbl-mr{
-    width: 780px;
+    width: 670px;
 }
 .tbl-mr tbody tr:nth-child(4){
     background: var(--bg-color2);
@@ -157,6 +157,42 @@ table{
 .gr-total span:last-child{
     color: var(--primary-color);
 }
+.sz-foot{
+    padding: 0.3rem;
+    width: fit-content;
+    align-items: center;
+}
+.sz-foot img{
+    width: 90px;
+}
+.sz-foot span{
+    width: fit-content;
+    padding-top: 1rem;
+    font-weight: 400;
+    border-top: 1px solid lightgrey;
+    color: rgb(68, 68, 68);
+}
+.foot-sign{
+    align-items: end;
+}
+.exp-pdf,.print{
+    cursor: pointer;
+}
+.exp-pdf{
+    color: white;
+    font-weight: 700;
+    background: var(--primary-color);
+    padding: .7rem;
+    border: none;
+    border-radius: 5px;
+}
+.print{
+    color: white;
+    background: rgb(37, 37, 37);
+    border: none;
+    border-radius: 6px;
+    padding: .7rem 1rem;
+}
 @media (max-width:1200px){
     .invoice-ruls{
         width: 80%;
@@ -170,7 +206,7 @@ table{
         width: 70%;
     }
     .tbl-mr{
-        width: 780px;
+        width: 670px;
     }
 }
 @media (max-width:768px){
@@ -178,6 +214,6 @@ table{
         width: 90%;
     }
     .tbl-mr{
-        width: 780px;
+        width: 670px;
     }
 }
