--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -4,6 +4,24 @@
     color: var(--primary-color);
     font-weight: normal;
 }
+.h2-line-bt{
+    font-weight: 600;
+    font-size: 2rem;
+    margin-top: 1rem;
+    width: fit-content;
+    margin: 0 auto;
+    position: relative;
+}
+.h2-line-bt::before{
+    content: '';
+    width: 50%;
+    height: 2px;
+    background: var(--icon-search-color);
+    position: absolute;
+    left: 50%;
+    bottom: -7px;
+    translate: -50%;
+}
 /* current page */
 
 .flx-jst{
@@ -11,6 +29,9 @@
     justify-content: space-between;
     align-items: center;
     gap: 1rem;
+}
+.txt-align{
+    text-align: center;
 }
 .gr-all{
     display: grid;
@@ -119,13 +140,76 @@ svg{
 .my-img .imag1{
     width: 100%;
 }
+.what-we-do{
+    background: var(--bg-color2);
+}
+.box{
+    position: relative;
+    padding: 3rem;
+    background: white;
+}
+.box p{
+    text-align: start;
+    color: rgb(107, 106, 106);
+}
+.box h3{
+    font-size: 1.5rem;
+    font-weight: 500;
+}
+.hints-nbr h1{
+    font-size: 75px;
+    color:rgb(238, 236, 236);
+    font-weight: bold;
+    position: absolute;
+    top: 0;
+    right: 2.4rem;
+}
+.sz-icon img{
+    width: 60px;
+}
+.br-rad .box{
+    border-radius: 1rem;
+}
+.boxes{
+    background: var(--bg-color2);
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: 1rem;
+}
+.wrapper{
+    margin-top: 2rem;
+}
+.box:hover  h1{
+    color:rgb(240, 239, 239);
+    right: 3rem;
+}
+.box:hover  h3{
+    color: var(--primary-color);
+}
+.what-we-do{
+    padding: 3rem 8%;
+}
 @media (max-width:1200px){
     .gr-all {
-        grid-template-columns: 100%;
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
     }
     .h1-set {
         font-size: 200%;
         color: #2c2c2c;
+    }
+}
+@media (max-width:991px){
+    .gr-all {
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+    }
+    .h1-set {
+        font-size: 200%;
+        color: #2c2c2c;
+    }
+    .boxes{
+
     }
 }
 @media (max-width:768px){
