--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -304,6 +304,32 @@ svg{
 .testimonials .boxes{
     margin-top: 3rem;
 }
+.blogs .boxes{
+    background: none;
+    text-align: start;
+}
+.blogs .blog{
+    color: gray;
+    font-weight: 600;
+    font-size: 13px;
+    margin-top: 3rem;
+}
+.blogs .blog h5{
+    color: black;
+    font-size: 1.1rem;
+    font-weight: 500;
+}
+.blogs .blog h6{
+    margin: 0.3rem 0;
+    font-size: 15px;
+    font-weight: 700;
+}
+.blogs .boxes img{
+    filter: grayscale(0%);
+    border-radius: 0;
+    width: 100%;
+    height: 100%;
+}
 /* .testimonials{
     padding: 2rem 0;
 } */
