--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -330,6 +330,9 @@ svg{
     width: 100%;
     height: 100%;
 }
+.blog .img-blog img{
+    border-radius: 5px;
+}
 /* .testimonials{
     padding: 2rem 0;
 } */
