--- a/css/primary.css
+++ b/css/primary.css
@@ -36,3 +36,49 @@ html {
     font-family: 'Open Sans', sans-serif;
     scroll-behavior: smooth;
 }
+.btn{
+    border: none;
+    width: 100%;
+    height: 50px;
+    background: var(--red-color);
+    color: white;
+    font-weight: bold;
+    font-size: 1.2rem;
+    border-radius: 7px;
+    cursor: pointer;
+    position: relative;
+}
+.btn::before{
+    content: '';
+    width: 50%;
+    height: 100%;
+    background: linear-gradient(45deg, #ffffff1a, transparent);
+    position: absolute;
+    top: 0;
+    border-radius: 7px 0 0 7px;
+    left: 0;
+    transition: .3s;
+}
+.btn:hover:before{
+    height: 0%;
+    top: unset;
+    left: 0;
+    bottom: 0;
+}
+.btn::after{
+    content: '';
+    width: 50%;
+    height: 0%;
+    background: linear-gradient(45deg, transparent, #ffffff1a);
+    position: absolute;
+    bottom: 0;
+    border-radius: 0px 7px 7px 0px;
+    right: 0;
+    transition: .3s;
+}
+.btn:hover:after{
+    height: 100%;
+    bottom: unset;
+    right: 0;
+    top: 0;
+}
