--- a/css/404.css
+++ b/css/404.css
@@ -31,7 +31,7 @@ svg{
     align-items: center;
     padding: 3rem 0;
 }
-.btn{
+.btn404{
     color: white;
     background: var(--primary-color);
     padding: .7rem 1.6rem;
