--- a/css/cart.css
+++ b/css/cart.css
@@ -150,6 +150,7 @@ table,.coupon{
 }
 table{
     padding: 1.3rem;
+    min-width: 950px;
 }
 tr{
     padding: 1rem;
@@ -265,6 +266,66 @@ label{
     width: 32px;
     outline: none;
     padding-left: 9px;
+}
+.wait-min{
+    background-color: #b6effb;
+    padding: 1.4rem;
+    border: 1px solid #8cdcff;
+    position: absolute;
+    border-radius: 5px;
+    color: #055160;
+    align-items: start;
+    gap: 0.4rem;
+    width: 380px;
+    top: 1rem;
+    right: 2rem;
+}
+.btnsuccess{
+    margin-right: 10px;
+    position: relative;
+    top: 3px;
+}
+.btnclose{
+    position: absolute;
+    top: 35%;
+    right: 1rem;
+    cursor: pointer;
+}
+.btnclose svg{
+    width: 30px;
+    height: 30px;
+    stroke: #737373;
+}
+.progress{
+    position: absolute;
+    bottom: -1px;
+    left: -1px;
+    width: 0%;
+    height: 4px;
+    background: #0c5460;
+}
+.progress.animate{
+    animation: progress 5s ;
+}
+@keyframes progress{
+    0%{
+        width: 0%;
+    }
+    25%{
+        width: 25%;
+    }
+    50%{
+        width: 50%;
+    }
+    75%{
+        width: 75%;
+    }
+    80%{
+        width: 80%;
+    }
+    100%{
+        width: 100%;
+    }
 }
 @media (max-width:1291px){
     .cart{
