--- a/css/primary.css
+++ b/css/primary.css
@@ -93,3 +93,8 @@ input::-webkit-inner-spin-button {
 input[type=number] {
   -moz-appearance: textfield;
 }
+svg{
+    width: 16px ;
+    height: 16px;
+    fill: var(--gray-color);
+}
