--- a/css/primary.css
+++ b/css/primary.css
@@ -23,7 +23,7 @@
     list-style: none;
     margin: 0;
     padding: 0;
-    transition: .3s;
+    /* transition: .3s; */
     text-transform: capitalize;
 }
 
