complete part one of checkout page

--- a/css/checkout.css
+++ b/css/checkout.css
@@ -298,4 +298,10 @@ lord-icon{
     .pay-option li:nth-child(4).rotate {
         height: 311px;
     }
+    .divs::before{
+        display: none;
+    }
+    lord-icon{
+        display: none;
+    }
 }
