complete html css settings in compare page without js

--- a/css/primary.css
+++ b/css/primary.css
@@ -8,7 +8,7 @@
     --text-color: #323232;
     --search-color-placehoder: #707981;
     --icon-search-color: #ffa53b;
-    --red-color: #ff7272;
+    --red-color: rgb(244 67 67);
     --icon-color: #222;
     --bg-color:#e2e2e2;
     --primary-color: #0da487;
