--- a/css/ordersuccess.css
+++ b/css/ordersuccess.css
@@ -183,7 +183,7 @@ ul{
     color: #5f5f5f;
 }
 .top h3{
-    color: rgb(90, 90, 90);
+    color: rgb(55 55 55);
 }
 .info{
     padding: 1rem;
@@ -203,6 +203,7 @@ ul{
 .pric-detail p{
     padding: 1rem;
     color: rgb(92, 92, 92);
+    font-size: 15px;
 }
 @media (max-width:1268px){
     .cart{
